IJP-630 (wip) IJ-CR-10129: reasonable default implementation of ArrangementStandardSettingsAware.getArrangementTabInfos
(cherry picked from commit cd369ab80d6989f5ed53892fe4e02eb821e30bb5)

IJ-CR-10129

GitOrigin-RevId: 7c148b17df6d5121c6a924bd5444172ad1c5eec7